--- a/assets/less/module-works.less
+++ b/assets/less/module-works.less
@@ -84,6 +84,12 @@
   #cardis {
     background-image: url(../img/portfolio-cardis.jpg);
   }
+  #besson {
+    background-image: url(../img/portfolio-besson.jpg);
+  }
+  #prateo {
+    background-image: url(../img/portfolio-prateo.jpg);
+  }
 }
 
 /*
