--- a/templates/fr/index.html.twig
+++ b/templates/fr/index.html.twig
@@ -23,30 +23,30 @@
             {{ 'homepage.work.title' | trans }}
         </h3>
         <div class="works">
-            <a id="cardis" href="{{ path('portfolio_show', { slug: 'cardis' }) }}">
+            <a id="prateo" href="{{ path('portfolio_show', { slug: 'prateo' }) }}">
+                <hgroup>
+                    <h3>{{ 'homepage.work.prateo.title' | trans }}</h3>
+                    <h5 class="title-separation x-long-sep magenta-sep">
+                        <span></span>
+                        {{ 'homepage.work.prateo.baseline' | trans }}
+                    </h5>
+                </hgroup>
+            </a>
+            <a id="besson" href="{{ path('portfolio_show', { slug: 'besson' }) }}">
+                <hgroup>
+                    <h3>{{ 'homepage.work.besson.title' | trans }}</h3>
+                    <h5 class="title-separation x-long-sep magenta-sep">
+                        <span></span>
+                        {{ 'homepage.work.besson.baseline' | trans }}
+                    </h5>
+                </hgroup>
+            </a>
+            <a id="cardis" href="{{ path('portfolio_show', { slug: 'cardis' }) }}" class="last">
                 <hgroup>
                     <h3>{{ 'homepage.work.cardis.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
                         <span></span>
                         {{ 'homepage.work.cardis.baseline' | trans }}
-                    </h5>
-                </hgroup>
-            </a>
-            <a id="brouillondeculture" href="{{ path('portfolio_show', { slug: 'brouillondeculture' }) }}">
-                <hgroup>
-                    <h3>{{ 'homepage.work.brouillondeculture.title' | trans }}</h3>
-                    <h5 class="title-separation x-long-sep magenta-sep">
-                        <span></span>
-                        {{ 'homepage.work.brouillondeculture.baseline' | trans }}
-                    </h5>
-                </hgroup>
-            </a>
-            <a id="rodondijoye" href="{{ path('portfolio_show', { slug: 'rodondijoye' }) }}" class="last">
-                <hgroup>
-                    <h3>{{ 'homepage.work.rodondijoye.title' | trans }}</h3>
-                    <h5 class="title-separation x-long-sep magenta-sep">
-                        <span></span>
-                        {{ 'homepage.work.rodondijoye.baseline' | trans }}
                     </h5>
                 </hgroup>
             </a>
