--- a/templates/fr/portfolio.html.twig
+++ b/templates/fr/portfolio.html.twig
@@ -24,7 +24,25 @@
             {{ 'homepage.work.title' | trans }}
         </h3>
         <div class="works">
-            <a id="cardis" href="{{ path('portfolio_show', { slug: 'cardis' }) }}">
+            <a id="prateo" href="{{ path('portfolio_show', { slug: 'prateo' }) }}">
+                <hgroup>
+                    <h3>{{ 'homepage.work.prateo.title' | trans }}</h3>
+                    <h5 class="title-separation x-long-sep magenta-sep">
+                        <span></span>
+                        {{ 'homepage.work.prateo.baseline' | trans }}
+                    </h5>
+                </hgroup>
+            </a>
+            <a id="besson" href="{{ path('portfolio_show', { slug: 'besson' }) }}">
+                <hgroup>
+                    <h3>{{ 'homepage.work.besson.title' | trans }}</h3>
+                    <h5 class="title-separation x-long-sep magenta-sep">
+                        <span></span>
+                        {{ 'homepage.work.besson.baseline' | trans }}
+                    </h5>
+                </hgroup>
+            </a>
+            <a id="cardis" href="{{ path('portfolio_show', { slug: 'cardis' }) }}" class="last">
                 <hgroup>
                     <h3>{{ 'homepage.work.cardis.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -33,6 +51,8 @@
                     </h5>
                 </hgroup>
             </a>
+        </div>
+        <div class="works">
             <a id="brouillondeculture" href="{{ path('portfolio_show', { slug: 'brouillondeculture' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.brouillondeculture.title' | trans }}</h3>
@@ -42,7 +62,7 @@
                     </h5>
                 </hgroup>
             </a>
-            <a id="rodondijoye" href="{{ path('portfolio_show', { slug: 'rodondijoye' }) }}" class="last">
+            <a id="rodondijoye" href="{{ path('portfolio_show', { slug: 'rodondijoye' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.rodondijoye.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -51,9 +71,8 @@
                     </h5>
                 </hgroup>
             </a>
-        </div>
-        <div class="works">            
-            <a id="pierreetoile" href="{{ path('portfolio_show', { slug: 'pierreetoile' }) }}">
+
+            <a id="pierreetoile" href="{{ path('portfolio_show', { slug: 'pierreetoile' }) }}" class="last">
                 <hgroup>
                     <h3>{{ 'homepage.work.pierreetoile.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -62,6 +81,8 @@
                     </h5>
                 </hgroup>
             </a>
+        </div>
+        <div class="works">
             <a id="billetlemillion" href="{{ path('portfolio_show', { slug: 'billetlemillion' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.billetlemillion.title' | trans }}</h3>
@@ -71,7 +92,7 @@
                     </h5>
                 </hgroup>
             </a>
-            <a id="courtierspartenaires" href="{{ path('portfolio_show', { slug: 'courtierspartenaires' }) }}" class="last">
+            <a id="courtierspartenaires" href="{{ path('portfolio_show', { slug: 'courtierspartenaires' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.courtierspartenaires.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -80,9 +101,8 @@
                     </h5>
                 </hgroup>
             </a>
-        </div>
-        <div class="works">            
-            <a id="ehl" href="{{ path('portfolio_show', { slug: 'ehl' }) }}">
+            
+            <a id="ehl" href="{{ path('portfolio_show', { slug: 'ehl' }) }}" class="last">
                 <hgroup>
                     <h3>{{ 'homepage.work.ehl.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -91,6 +111,8 @@
                     </h5>
                 </hgroup>
             </a>
+        </div>
+        <div class="works">
             <a id="electrosanne" href="{{ path('portfolio_show', { slug: 'electrosanne' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.electrosanne.title' | trans }}</h3>
@@ -100,7 +122,7 @@
                     </h5>
                 </hgroup>
             </a>
-            <a id="faceit" href="{{ path('portfolio_show', { slug: 'faceit' }) }}" class="last">
+            <a id="faceit" href="{{ path('portfolio_show', { slug: 'faceit' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.faceit.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -109,9 +131,8 @@
                     </h5>
                 </hgroup>
             </a>
-        </div>
-        <div class="works">            
-            <a id="urturn" href="{{ path('portfolio_show', { slug: 'urturn' }) }}">
+            
+            <a id="urturn" href="{{ path('portfolio_show', { slug: 'urturn' }) }}" class="last">
                 <hgroup>
                     <h3>{{ 'homepage.work.urturn.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -120,6 +141,8 @@
                     </h5>
                 </hgroup>
             </a>
+        </div>
+        <div class="works">
             <a id="tennislausanne" href="{{ path('portfolio_show', { slug: 'tennislausanne' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.tennislausanne.title' | trans }}</h3>
@@ -129,7 +152,7 @@
                     </h5>
                 </hgroup>
             </a>
-            <a id="derham" href="{{ path('portfolio_show', { slug: 'derham' }) }}" class="last">
+            <a id="derham" href="{{ path('portfolio_show', { slug: 'derham' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.derham.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -138,9 +161,8 @@
                     </h5>
                 </hgroup>
             </a>
-        </div>
-        <div class="works">
-            <a id="uchitomi" href="{{ path('portfolio_show', { slug: 'uchitomi' }) }}">
+
+            <a id="uchitomi" href="{{ path('portfolio_show', { slug: 'uchitomi' }) }}" class="last">
                 <hgroup>
                     <h3>{{ 'homepage.work.uchitomi.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -149,6 +171,8 @@
                     </h5>
                 </hgroup>
             </a>
+        </div>
+        <div class="works">
             <a id="rdr" href="{{ path('portfolio_show', { slug: 'richter' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.rdr.title' | trans }}</h3>
@@ -158,7 +182,7 @@
                     </h5>
                 </hgroup>
             </a>
-            <a id="tw" href="{{ path('portfolio_show', { slug: 'tehran' }) }}" class="last">
+            <a id="tw" href="{{ path('portfolio_show', { slug: 'tehran' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.tehran.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
