--- a/templates/fr/portfolio/cardis.html.twig
+++ b/templates/fr/portfolio/cardis.html.twig
@@ -5,8 +5,8 @@
 {% block body_class %}{{ parent() }} derham{% endblock %}
 
 
-{% block previous_work %}{{ 'homepage.work.tennislausanne.title' | trans }}{% endblock %}
-{% block previous_link %}{{ path('portfolio_show', { slug: 'tennislausanne' }) }}{% endblock %}
+{% block previous_work %}{{ 'homepage.work.besson.title' | trans }}{% endblock %}
+{% block previous_link %}{{ path('portfolio_show', { slug: 'besson' }) }}{% endblock %}
 {% block next_work %}{{ 'homepage.work.brouillondeculture.title' | trans }}{% endblock %}
 {% block next_link %}{{ path('portfolio_show', { slug: 'brouillondeculture' }) }}{% endblock %}
 
