--- a/templates/fr/index.html.twig
+++ b/templates/fr/index.html.twig
@@ -32,21 +32,21 @@
                     </h5>
                 </hgroup>
             </a>
-            <a id="besson" href="{{ path('portfolio_show', { slug: 'besson' }) }}">
-                <hgroup>
-                    <h3>{{ 'homepage.work.besson.title' | trans }}</h3>
-                    <h5 class="title-separation x-long-sep magenta-sep">
-                        <span></span>
-                        {{ 'homepage.work.besson.baseline' | trans }}
-                    </h5>
-                </hgroup>
-            </a>
-            <a id="cardis" href="{{ path('portfolio_show', { slug: 'cardis' }) }}" class="last">
+            <a id="cardis" href="{{ path('portfolio_show', { slug: 'cardis' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.cardis.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
                         <span></span>
                         {{ 'homepage.work.cardis.baseline' | trans }}
+                    </h5>
+                </hgroup>
+            </a>
+            <a id="brouillondeculture" href="{{ path('portfolio_show', { slug: 'brouillondeculture' }) }}" class="last">
+                <hgroup>
+                    <h3>{{ 'homepage.work.brouillondeculture.title' | trans }}</h3>
+                    <h5 class="title-separation x-long-sep magenta-sep">
+                        <span></span>
+                        {{ 'homepage.work.brouillondeculture.baseline' | trans }}
                     </h5>
                 </hgroup>
             </a>
