--- a/templates/fr/portfolio.html.twig
+++ b/templates/fr/portfolio.html.twig
@@ -33,16 +33,7 @@
                     </h5>
                 </hgroup>
             </a>
-            <a id="besson" href="{{ path('portfolio_show', { slug: 'besson' }) }}">
-                <hgroup>
-                    <h3>{{ 'homepage.work.besson.title' | trans }}</h3>
-                    <h5 class="title-separation x-long-sep magenta-sep">
-                        <span></span>
-                        {{ 'homepage.work.besson.baseline' | trans }}
-                    </h5>
-                </hgroup>
-            </a>
-            <a id="cardis" href="{{ path('portfolio_show', { slug: 'cardis' }) }}" class="last">
+            <a id="cardis" href="{{ path('portfolio_show', { slug: 'cardis' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.cardis.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -51,9 +42,7 @@
                     </h5>
                 </hgroup>
             </a>
-        </div>
-        <div class="works">
-            <a id="brouillondeculture" href="{{ path('portfolio_show', { slug: 'brouillondeculture' }) }}">
+            <a id="brouillondeculture" href="{{ path('portfolio_show', { slug: 'brouillondeculture' }) }}" class="last">
                 <hgroup>
                     <h3>{{ 'homepage.work.brouillondeculture.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -62,6 +51,8 @@
                     </h5>
                 </hgroup>
             </a>
+        </div>
+        <div class="works">
             <a id="rodondijoye" href="{{ path('portfolio_show', { slug: 'rodondijoye' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.rodondijoye.title' | trans }}</h3>
@@ -71,8 +62,7 @@
                     </h5>
                 </hgroup>
             </a>
-
-            <a id="pierreetoile" href="{{ path('portfolio_show', { slug: 'pierreetoile' }) }}" class="last">
+            <a id="pierreetoile" href="{{ path('portfolio_show', { slug: 'pierreetoile' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.pierreetoile.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -81,9 +71,7 @@
                     </h5>
                 </hgroup>
             </a>
-        </div>
-        <div class="works">
-            <a id="billetlemillion" href="{{ path('portfolio_show', { slug: 'billetlemillion' }) }}">
+            <a id="billetlemillion" href="{{ path('portfolio_show', { slug: 'billetlemillion' }) }}" class="last">
                 <hgroup>
                     <h3>{{ 'homepage.work.billetlemillion.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -92,6 +80,8 @@
                     </h5>
                 </hgroup>
             </a>
+        </div>
+        <div class="works">
             <a id="courtierspartenaires" href="{{ path('portfolio_show', { slug: 'courtierspartenaires' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.courtierspartenaires.title' | trans }}</h3>
@@ -100,9 +90,8 @@
                         {{ 'homepage.work.courtierspartenaires.baseline' | trans }}
                     </h5>
                 </hgroup>
-            </a>
-            
-            <a id="ehl" href="{{ path('portfolio_show', { slug: 'ehl' }) }}" class="last">
+            </a>            
+            <a id="ehl" href="{{ path('portfolio_show', { slug: 'ehl' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.ehl.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -111,9 +100,7 @@
                     </h5>
                 </hgroup>
             </a>
-        </div>
-        <div class="works">
-            <a id="electrosanne" href="{{ path('portfolio_show', { slug: 'electrosanne' }) }}">
+            <a id="electrosanne" href="{{ path('portfolio_show', { slug: 'electrosanne' }) }}" class="last">
                 <hgroup>
                     <h3>{{ 'homepage.work.electrosanne.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -122,6 +109,8 @@
                     </h5>
                 </hgroup>
             </a>
+        </div>
+        <div class="works">
             <a id="faceit" href="{{ path('portfolio_show', { slug: 'faceit' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.faceit.title' | trans }}</h3>
@@ -130,9 +119,8 @@
                         {{ 'homepage.work.faceit.baseline' | trans }}
                     </h5>
                 </hgroup>
-            </a>
-            
-            <a id="urturn" href="{{ path('portfolio_show', { slug: 'urturn' }) }}" class="last">
+            </a>            
+            <a id="urturn" href="{{ path('portfolio_show', { slug: 'urturn' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.urturn.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -141,9 +129,7 @@
                     </h5>
                 </hgroup>
             </a>
-        </div>
-        <div class="works">
-            <a id="tennislausanne" href="{{ path('portfolio_show', { slug: 'tennislausanne' }) }}">
+            <a id="tennislausanne" href="{{ path('portfolio_show', { slug: 'tennislausanne' }) }}" class="last">
                 <hgroup>
                     <h3>{{ 'homepage.work.tennislausanne.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -152,6 +138,8 @@
                     </h5>
                 </hgroup>
             </a>
+        </div>
+        <div class="works">
             <a id="derham" href="{{ path('portfolio_show', { slug: 'derham' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.derham.title' | trans }}</h3>
@@ -161,19 +149,16 @@
                     </h5>
                 </hgroup>
             </a>
-
-            <a id="uchitomi" href="{{ path('portfolio_show', { slug: 'uchitomi' }) }}" class="last">
+            <a id="uchitomi" href="{{ path('portfolio_show', { slug: 'uchitomi' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.uchitomi.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
                         <span></span>
                         {{ 'homepage.work.uchitomi.baseline' | trans }}
                     </h5>
-                </hgroup>
+                </hgroup class="last">
             </a>
-        </div>
-        <div class="works">
-            <a id="rdr" href="{{ path('portfolio_show', { slug: 'richter' }) }}">
+            <a id="rdr" href="{{ path('portfolio_show', { slug: 'richter' }) }}" class="last">
                 <hgroup>
                     <h3>{{ 'homepage.work.rdr.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -182,6 +167,8 @@
                     </h5>
                 </hgroup>
             </a>
+        </div>
+        <div class="works">
             <a id="tw" href="{{ path('portfolio_show', { slug: 'tehran' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.tehran.title' | trans }}</h3>
