--- a/templates/fr/portfolio/cardis.html.twig
+++ b/templates/fr/portfolio/cardis.html.twig
@@ -1,12 +1,12 @@
 {% extends "fr/portfolio/base.html.twig" %}
 
-{% block title %}De Rham Immobilier Sotheby's International Realy – Développement Symfony, communication globale, Antistatique{% endblock %}
+{% block title %}Cardis Immobilier – Développement Symfony, communication globale, Antistatique{% endblock %}
 
 {% block body_class %}{{ parent() }} derham{% endblock %}
 
 
-{% block previous_work %}{{ 'homepage.work.besson.title' | trans }}{% endblock %}
-{% block previous_link %}{{ path('portfolio_show', { slug: 'besson' }) }}{% endblock %}
+{% block previous_work %}{{ 'homepage.work.prateo.title' | trans }}{% endblock %}
+{% block previous_link %}{{ path('portfolio_show', { slug: 'prateo' }) }}{% endblock %}
 {% block next_work %}{{ 'homepage.work.brouillondeculture.title' | trans }}{% endblock %}
 {% block next_link %}{{ path('portfolio_show', { slug: 'brouillondeculture' }) }}{% endblock %}
 
