--- a/templates/fr/portfolio/besson.html.twig
+++ b/templates/fr/portfolio/besson.html.twig
@@ -1,6 +1,6 @@
 {% extends "fr/portfolio/base.html.twig" %}
 
-{% block title %}De Rham Immobilier Sotheby's International Realy – Développement Symfony, communication globale, Antistatique{% endblock %}
+{% block title %}Besson Sécurité - Wordpress personnalisé{% endblock %}
 
 {% block body_class %}{{ parent() }} derham{% endblock %}
 
