--- a/templates/fr/portfolio/prateo.html.twig
+++ b/templates/fr/portfolio/prateo.html.twig
@@ -1,14 +1,14 @@
 {% extends "fr/portfolio/base.html.twig" %}
 
-{% block title %}De Rham Immobilier Sotheby's International Realy – Développement Symfony, communication globale, Antistatique{% endblock %}
+{% block title %}Prateo - Rebranding complet et Wordpress personnalisé{% endblock %}
 
 {% block body_class %}{{ parent() }} derham{% endblock %}
 
 
 {% block previous_work %}{{ 'homepage.work.tennislausanne.title' | trans }}{% endblock %}
 {% block previous_link %}{{ path('portfolio_show', { slug: 'tennislausanne' }) }}{% endblock %}
-{% block next_work %}{{ 'homepage.work.besson.title' | trans }}{% endblock %}
-{% block next_link %}{{ path('portfolio_show', { slug: 'besson' }) }}{% endblock %}
+{% block next_work %}{{ 'homepage.work.cardis.title' | trans }}{% endblock %}
+{% block next_link %}{{ path('portfolio_show', { slug: 'cardis' }) }}{% endblock %}
 
 {% block baseline %}
 <div class="baseline-space"></div>
