[web dev job] update requirements

--- a/templates/en/job/web-developer.html.twig
+++ b/templates/en/job/web-developer.html.twig
@@ -1,6 +1,6 @@
 {% extends "layout.html.twig" %}
 
-{% block title %}{{ 'job.title' | trans }} - Web Developer (80%){% endblock %}
+{% block title %}{{ 'job.title' | trans }} - Web Developer (70% - 100%){% endblock %}
 
 {% block meta_description%}Job de développeur web à Lausanne, Suisse. Dans une chouette agence.{% endblock %}
 {% block head_scripts %}
@@ -49,20 +49,22 @@
         <h3>Qualifications and skills</h3>
         <ul>
             <li>Undergraduate university degree or equivalent higher education qualification</li>
-            <li>Minimum one year of web development experiencea</li>
+            <li>Minimum two years of web development experiencea</li>
             <li>In-depth knowledge of new web technologies</li>
+            <li>In-depth knowledge of HTTP and REST</li>
             <li>Knowledge of Symfony 2 framework</li>
             <li>Extensive knowledge of Javascript</li>
             <li>Good knowledge of databases</li>
-            <li>Knowledge of HTTP and REST</li>
+            <li>Knowledge of Elasticsearch, RabbitMQ or Redis whould be an advantage</li>
             <li>Good level of French and English</li>
             <li>Knowledge of German would be an advantage</li>
             <li>Familiarity working with version control tools (git / subversion)</li>
+            <li>Command line proficiency with Linux/*nix system</li>
         </ul>
 
         <h3>Requirements and personal skills</h3>
         <ul>
-            <li>Github account holder</li>
+            <li>Github account holder (mention it in your application)</li>
             <li>Curious by nature and attentive to the needs of users</li>
         </ul>
 
@@ -74,11 +76,11 @@
             Antistatique is a digital agency based in Lausanne, Switzerland. It is made up of seven people (four developers, one designer, one project manager and one digital strategist). We support our clients in managing their web presence, mobile applications, e-commerce and implementation of e-marketing strategies.
         </p>
         <p>
-            Our team is well integrated into the local web community, everyone participates in meet-ups and conferences on web-related subjects on a regular basis.  
+            Our team is well integrated into the local web community, everyone participates in meet-ups and conferences on web-related subjects on a regular basis.
         </p>
 
         <h3>Applications via</h3>
-        
+
             <script type="IN/Apply"
                data-logo="http://antistatique.net/assets/img/logo-a.png"
                data-companyname="Antistatique"
