--- a/templates/fr/job/web-developer.html.twig
+++ b/templates/fr/job/web-developer.html.twig
@@ -1,8 +1,8 @@
 {% extends "layout.html.twig" %}
 
-{% block title %}{{ 'job.title' | trans }} - Web Developer (80%){% endblock %}
+{% block title %}{{ 'job.title' | trans }} - Web Developer (70% - 100%){% endblock %}
 
-{% block meta_description%}Job de développeur web à Lausanne, Suisse. Dans une chouette agence.{% endblock %}
+{% block meta_description%}Job de développeur web à Lausanne, Suisse, PHP5, Symfony2, Elasticsearch, RabbitMQ, et d'autres technologies. Dans une chouette agence.{% endblock %}
 {% block head_scripts %}
     <script src="//platform.linkedin.com/in.js" type="text/javascript">
         api_key: lj5b50hfde72
@@ -45,27 +45,29 @@
         <h4>Développement web</h4>
         <ul>
             <li>Développement PHP 5 avec le framework Symfony 2</li>
-            <li>Intégration HTML / CSS / LESS</li>
-            <li>Développement sous Drupal</li>
+            <li>Développement Javascript (AngularJS, node.js, jQuery)</li>
+            <li>Intégration HTML / CSS / LESS (réalisé par <a href="{{ path('team') }}">nos experts frontend</a>)</li>
         </ul>
 
         <h3>Formation et connaissances</h3>
         <ul>
             <li>Diplôme universitaire ou HES (ou équivalent)</li>
-            <li>Expérience dans le développement web de minimum 1 ans</li>
+            <li>Expérience dans le développement web de minimum 2 ans</li>
             <li>Très bonnes connaissances des nouvelles technologies web</li>
             <li>Excellentes connaissances en Javascript</li>
             <li>Connaissance du framework Symfony</li>
-            <li>Bonnes connaissances des bases de données</li>
+            <li>Bonnes connaissances des bases de données (PostgreSQL, MySQL, MongoDB, ...)</li>
+            <li>Connaissance des outils Elasticsearch, RabbitMQ, Redis un plus</li>
             <li>Connaissances HTTP, REST, CSS, HTML</li>
             <li>Bonne maîtrise de l’anglais</li>
             <li>Connaissance de l’allemand, un plus</li>
-            <li>Maitrise des outils de versionning (git / subversion)</li>
+            <li>Maitrise des outils de versionning (git)</li>
+            <li>Command line proficiency with Linux/*nix system</li>
         </ul>
 
         <h3>Exigences et compétences personnelles</h3>
         <ul>
-            <li>Compte github</li>
+            <li>Compte Github (à mentionner dans la postulation)</li>
             <li>Curieux et atentif aux besoins des utilisateurs</li>
         </ul>
 
