fix number of people working at Antistatique :-)

--- a/templates/fr/job/web-developer.html.twig
+++ b/templates/fr/job/web-developer.html.twig
@@ -75,7 +75,7 @@
         <p>Participer à notre veille technologique et au partage de connaissances (Rédaction d'articles du blog, présentations, animation de séminaires, etc).</p>
 
         <h3>Antistatique</h3>
-        <p>Antistatique est une agence digitale de 7 personnes (4 développeurs, 1 designer, 1 cheffe de projet et 1 digital strategist) basée en Suisse à Lausanne.
+        <p>Antistatique est une agence digitale de 9 personnes (3 développeurs, 1 software designer, 2 designer, 2 cheffe de projet et 1 digital strategist) basée en Suisse à Lausanne.
             Nous accompagnons nos clients dans la réalisation de leur communication web, application mobile, e-commerce et dans la mise en place de stratégies e-marketing.
         </p>
         <p>Bien implantée dans la communauté web locale, toute l’équipe participe régulièrement aux meetups et conférences sur les domaines du web.
