--- a/templates/en/job/web-developer.html.twig
+++ b/templates/en/job/web-developer.html.twig
@@ -73,7 +73,7 @@
 
         <h3>Antistatique</h3>
         <p>
-            Antistatique is a digital agency based in Lausanne, Switzerland. It is made up of seven people (four developers, one designer, one project manager and one digital strategist). We support our clients in managing their web presence, mobile applications, e-commerce and implementation of e-marketing strategies.
+            Antistatique is a digital agency based in Lausanne, Switzerland. It is made up of nine people (three developers, one software designer, two designers, two projects manager and one digital strategist). We support our clients in managing their web presence, mobile applications, e-commerce and implementation of e-marketing strategies.
         </p>
         <p>
             Our team is well integrated into the local web community, everyone participates in meet-ups and conferences on web-related subjects on a regular basis.
