full or part time

--- a/templates/en/job/web-developer.html.twig
+++ b/templates/en/job/web-developer.html.twig
@@ -18,7 +18,7 @@
     <section>
         <h1 class="title-separation magenta-sep">
             <span></span>
-            Web Developer (70% - 100%)
+            Web Developer (full-time or part-time)
         </h1>
     </section>
 </div>
