--- a/templates/fr/job/web-developer.html.twig
+++ b/templates/fr/job/web-developer.html.twig
@@ -18,7 +18,7 @@
     <section>
         <h1 class="title-separation magenta-sep">
             <span></span>
-            Web Developer (70% - 100%)
+            Web Developer (temps plein ou temps partiel)
         </h1>
     </section>
 </div>
