We are looking for a drupal dev. Oh, and forget to say that we have 5 weeks of holidays :)

--- a/templates/en/job.html.twig
+++ b/templates/en/job.html.twig
@@ -28,7 +28,10 @@
                 <h3><del>Digital project manager</del></h3>
             </li>
             <li>
-                <h3><a href="{{ path('job_show', { slug: 'web-developer', _locale: 'en' }) }}">Web Developer</a></h3>
+                <h3><a href="{{ path('job_show', { slug: 'web-developer', _locale: 'en' }) }}">Web Developer (Symfony 2)</a></h3>
+            </li>
+            <li>
+                <h3><a href="{{ path('job_show', { slug: 'web-developer-drupal', _locale: 'en' }) }}">Web Developer (Drupal)</a></h3>
             </li>
         </ul>
 
