--- a/templates/en/job/web-developer.html.twig
+++ b/templates/en/job/web-developer.html.twig
@@ -34,16 +34,18 @@
             <li>Varied and innovative projects</li>
             <li>Time for working on Open Source projects</li>
             <li>A budget for attending conferences</li>
+            <li>5 weeks of holidays</li>
             <li>A great café, Redbull and fruits</li>
             <li>A table-tennis table for playing with colleagues</li>
+            <li>Free time to stay up to date and training</li>
         </ul>
 
         <h3>Main Responsibilities</h3>
         <h4>Web development</h4>
         <ul>
             <li>PHP 5 development using the Symfony 2 framework</li>
-            <li>Javascript development</li>
-            <li>Development using Drupal</li>
+            <li>Javascript development (Angular.JS, node.js, jQuery)</li>
+            <li>Working with the integration team (HTML, SASS, CSS, JS)</li>
         </ul>
 
         <h3>Qualifications and skills</h3>
@@ -81,6 +83,7 @@
 
         <h3>Applications via</h3>
 
+{#
             <script type="IN/Apply"
                data-logo="http://antistatique.net/assets/img/logo-a.png"
                data-companyname="Antistatique"
@@ -92,8 +95,8 @@
                data-email="job@antistatique.net"
                data-jobId="WEBDEV-2"
             ></script>
-
-        <p>Ou <a href="mailto:job@antistatique.net?subject=subject=I am a developer, hire me">job@antistatique.net</a>.
+#}
+        <p><a href="mailto:job@antistatique.net?subject=subject=I am a developer, hire me">job@antistatique.net</a>.
         </p>
         <p>Applications received by post will be destroyed.</p>
     </div>
