--- a/templates/fr/job/web-developer-drupal.html.twig
+++ b/templates/fr/job/web-developer-drupal.html.twig
@@ -46,20 +46,18 @@
         <h3>Tâches principales</h3>
         <h4>Développement web</h4>
         <ul>
-            <li>Développement PHP 5 avec le framework Symfony 2</li>
-            <li>Développement Javascript (AngularJS, node.js, jQuery)</li>
+            <li>Développement PHP sur Drupal 7 et 8</li>
+            <li>Développement Javascript (AngularJS, jQuery)</li>
             <li>Intégration HTML / CSS / SASS (réalisé par <a href="{{ path('team') }}">nos experts frontend</a>)</li>
         </ul>
 
         <h3>Formation et connaissances</h3>
         <ul>
-            <li>Diplôme universitaire ou HES (ou équivalent)</li>
-            <li>Expérience dans le développement web de minimum 2 ans</li>
+            <li>Expérience sur Drupal de minimum 2 ans</li>
+            <li>Actif dans la communauté Drupal.org</li>
             <li>Très bonnes connaissances des nouvelles technologies web</li>
-            <li>Excellentes connaissances en Javascript</li>
-            <li>Connaissance du framework Symfony</li>
-            <li>Bonnes connaissances des bases de données (PostgreSQL, MySQL, MongoDB, ...)</li>
-            <li>Connaissance des outils Elasticsearch, RabbitMQ, Redis un plus</li>
+            <li>Bonnes connaissances des bases de données (MySQL, PostgreSQL)</li>
+            <li>Connaissance des outils Elasticsearch, Solr, un plus</li>
             <li>Connaissances HTTP, REST, CSS, HTML</li>
             <li>Bonne maîtrise de l’anglais</li>
             <li>Connaissance de l’allemand, un plus</li>
@@ -69,7 +67,7 @@
 
         <h3>Exigences et compétences personnelles</h3>
         <ul>
-            <li>Compte Github (à mentionner dans la postulation)</li>
+            <li>Compte Github et profile Drupal.org (à mentionner dans la postulation)</li>
             <li>Curieux et atentif aux besoins des utilisateurs</li>
         </ul>
 
@@ -98,7 +96,7 @@
                data-jobId="WEBDEV-2"
             ></script>
 #}
-        <p><a href="mailto:job@antistatique.net?subject=Je%20suis%20un%20d%C3%A9veloppeur%2C%20engagez-moi">job@antistatique.net</a>.
+        <p><a href="mailto:job@antistatique.net?subject=Je%20suis%20un%20d%C3%A9veloppeur%20Drupal%2C%20engagez-moi">job@antistatique.net</a> avec votre compte Github et votre profile de Drupal.org.
         </p>
         <p>Les dossiers envoyés par la poste (mail physique) seront détruits.</p>
     </div>
