english version is not already here

--- a/templates/fr/job/web-developer-drupal.html.twig
+++ b/templates/fr/job/web-developer-drupal.html.twig
@@ -30,7 +30,9 @@
         {# <h2>Nous avons trouvé la perle rare, le poste n'est plus à pourvoir. Merci à tous !</h2> #}
         <h2>Nous cherchons un développeur Symfony pour agrandir notre équipe</h2>
 
-        <p><small><a href="{{ path('job_show', { slug: 'web-developer', _locale: 'en' }) }}">Read the job offer in english</a></small></p>
+        {#
+        <p><small><a href="{{ path('job_show', { slug: 'web-developer-drupal', _locale: 'en' }) }}">Read the job offer in english</a></small></p>
+        #}
 
         <h3>Nous offrons</h3>
         <ul>
