upadte designer job

--- a/templates/fr/job.html.twig
+++ b/templates/fr/job.html.twig
@@ -31,7 +31,7 @@
                 <h3><a href="{{ path('job_show', { slug: 'web-developer-drupal' }) }}">Web Developer (Drupal)</a></h3>
             </li>
             <li>
-                <h3><del>Visual Designer</del></h3>
+                <h3><a href="{{ path('job_show', { slug: 'digital-designer' }) }}">Visual Designer</a></h3>
             </li>
         </ul>
 
